--- a/_posts/2018-08-22-algorave.tokyo.md
+++ b/_posts/2018-08-22-algorave.tokyo.md
@@ -18,6 +18,7 @@ title:  Algorave Tokyo 2018 Aug 19
 21:30 moxus+Scott Allen
 22:00 Akihiro Kubota
 ```
+---
 
 ### HydrKlank
 
@@ -53,8 +54,9 @@ moxusさんはTidalCycles上でtidal-lazyという仕組みを使った音がと
 
 TidalCyclesによるポエトリーリーディング・ビート詩人的な趣きで、ジャズドラムっぽい音色だったこともあり個人的には聴いていて最も即興演奏をしたくなる内容でした。TidalCyclesの懐の深さを感じることができました。
 
+---
 
-全体的を通して自分が思っていたよりも即興性の強い音楽が多く、音楽性・精神性は以下のアカウントに現れているのではないかと思うところでした。
+全体を通して自分が思っていたよりも即興性の強い音楽が多く、音楽性・精神性は以下のアカウントに現れているのではないかと思うところでした。
 
 [https://twitter.com/ALGORAVE_ADVICE](https://twitter.com/ALGORAVE_ADVICE)
 
