--- a/_posts/2022-03-21-algorave-10.md
+++ b/_posts/2022-03-21-algorave-10.md
@@ -5,7 +5,12 @@ title:  Algorave 10th Birthday Party
 
 3/20(日)にAlgorave 10th Birthday Partyで10分間パフォーマンスしたのでその記録。
 
-コード: [https://github.com/kn1kn1/alogorave10](https://github.com/kn1kn1/alogorave10)
+当日のアーカイブとソースコードは以下。
+
+- アーカイブ: 
+  - [https://archive.org/details/algorave-10-kn1kn1](https://archive.org/details/algorave-10-kn1kn1)
+  - [https://www.youtube.com/watch?v=iOJzrMtxRk4](https://www.youtube.com/watch?v=iOJzrMtxRk4)
+- ソースコード: [https://github.com/kn1kn1/alogorave10](https://github.com/kn1kn1/alogorave10)
 
 ### 登録からパフォーマンスまで
 
